# schemly

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.yml  test_schema.schemly
.github/workflows/: release.yml  test.yml
docs/: GRAMMAR_COMPARISON.md  YAML_SYNTAX_GUIDE.md
examples/: blog.schema  blog.yaml  ecommerce.schema  ecommerce.yaml  linktree.schema  linktree.yaml
src/: config.rs  error.rs  interactive.rs  lib.rs  main.rs  template.rs  types.rs  utils.rs  validation.rs
src/generators/: controller_generator.rs  dto_generator.rs  factory_generator.rs  migration_generator.rs  mod.rs  model_generator.rs  pivot_table_generator.rs  request_generator.rs  resource_generator.rs  shared.rs
src/grammar/: schemly.pest
src/schema/: ast.rs  converter.rs  mod.rs  parser.rs
src/templates/: controller.php.template  dto.php.template  factory.php.template  migration.php.template  model.php.template  pivot_table.php.template  request.php.template  resource.php.template
test_output/app/DTOs/: CategoryDTO.php  LinkDTO.php  UserDTO.php
test_output/app/Http/Controllers/: CategoryController.php  LinkController.php  UserController.php
test_output/app/Http/Resources/: CategoryResource.php  LinkResource.php  UserResource.php
test_output/app/Models/: Category.php  Link.php  User.php
test_output/database/factories/: CategoryFactory.php  LinkFactory.php  UserFactory.php
test_output/database/migrations/: 2025_11_22_104735_create_categories_table.php  2025_11_22_104735_create_links_table.php  2025_11_22_104735_create_users_table.php
tests/: cli_tests.rs  integration_tests.rs  interactive_tests.rs
