[package]
name = "schemly"
version = "0.1.0"
edition = "2024"
description = "A Laravel code generator from YAML configuration files"
homepage = "https://schemly.dev"
repository = "https://github.com/DevPlus31/schemly"
license = "MIT"
keywords = ["laravel", "generator", "yaml", "php", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_yaml = "0.9.34+deprecated"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
