[package]
name = "schemly"
version = "2.0.0"
edition = "2024"
description = "A Laravel code generator from Prisma-like schema files"
homepage = "https://schemly.dev/"
repository = "https://github.com/DevPlus31/schemly"
license = "MIT"
keywords = ["laravel", "generator", "prisma", "php", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.141"
pathdiff = "0.2.3"
pest = "2.8.4"
pest_derive = "2.8.4"

[dev-dependencies]
tempfile = "3.8"
