[package]
name = "schemly"
version = "2.0.0"
edition = "2024"
description = "A Laravel code generator from Prisma-like schema files"
homepage = "https://schemly.dev/"
repository = "https://github.com/DevPlus31/schemly"
license = "MIT"
keywords = ["laravel", "generator", "prisma", "php", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.141"
pathdiff = "0.2.3"
pest = "2.8.4"
pest_derive = "2.8.4"
tera = "1.20.1"
lazy_static = "1.5.0"
include_dir = "0.7.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-std"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }

[dev-dependencies]
tempfile = "3.8"
